// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth service should return a token when call login 1`] = `
Object {
  "data": Object {
    "token": "a1b.c2d.e3f",
  },
  "errors": null,
}
`;

exports[`Auth service should return an user when call register 1`] = `
Object {
  "data": Object {
    "email": "john.doe@email.com",
    "name": "John Doe",
    "password": "1234",
  },
  "errors": null,
}
`;
